--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
 
 @font-face {
 	font-family: "lettertype";
-	src: url(/font/Jost/Jost-VariableFont_wght.ttf);
+	src: url("../font/Jost/Jost-VariableFont_wght.ttf");
 }
 
 /*********************/
@@ -21,6 +21,7 @@
 
 	--color-text:light-dark(black, white);
 	--color-background:light-dark(white,black);
+	--placeholder-color: light-dark( #aaa,white);
 	--lv-font: "lettertype";
 }
 
@@ -53,6 +54,11 @@ h2 {
 	text-align: center;
 }
 
+h4 { 
+	font-family: var(--lv-font);
+	font-weight: normal;
+}
+
 /* Styling voor alle linkjes op de website */
 a {
 	font-family: var(--lv-font);
@@ -61,6 +67,17 @@ a {
 p {
 	font-weight: 400;
 	font-family: var(--lv-font);
+}
+
+.visually-hidden {
+/* A11y Project - How to hide content */
+clip: rect(0 0 0 0);
+clip-path: inset(50%);
+height: 1px;
+overflow: hidden;
+position: absolute;
+white-space: nowrap;
+width: 1px;
 }
 /*********** STOPT HIER: Global Styling ***********/
 
@@ -78,7 +95,7 @@ header {
 	align-items:center;
 	position: fixed;
 	z-index:6;
-	width: 100vw;
+	width: 100%;
 	left: 0;
 	background-color: var(--color-background);
 	height: 4em;
@@ -141,10 +158,6 @@ nav {
 	padding:1em;
 	font-family: "lettertype";
 	background-color: var(--color-background);
-	
-	display:flex;
-	align-items: stretch;
-	gap:1em;
 
 	position:fixed;
 	left:0;
@@ -155,17 +168,34 @@ nav {
 	transition:1s;
 	z-index: 5;
 
+	/* Bron: ChatGPT */
 	display: flex;
-  	justify-content: center;
-  	align-self: center;
+    padding: 5px 10px;
   }
 
-  form:nth-last-of-type(1) > input { 
-	border-radius: 1em;
-	outline:0.5em
-  }
+  /* Bron: ChatGPT */
+input[type="search"] {
+	border: none;
+	outline: none;
+	flex-grow: 1; /* Zodat de input de resterende ruimte inneemt */
+	font-size: 16px;
+	min-width: 0;
+	border-radius: 50px;
+	border: 1px solid #000;
+	padding: 0.5em .5em .5em 2em;
+	background-image: url(../images/header/search.svg);
+	background-repeat: no-repeat;
+	background-position: .3em center;
+	}
 
-  form:nth-of-type(1) button { 
+/* Bron ChatGPT */
+input::placeholder {
+	color: var(--placeholder-color); /* Placeholder-kleur */
+	font-style: italic; /* Placeholder-tekst in cursief */
+	font-size: 1.2em;
+	}
+
+form:nth-of-type(1) button { 
 	background-color: var(--color-background);
 	border: none;
   }
@@ -174,31 +204,41 @@ nav {
 	translate:0%; 
 	top: 4em; 
    }
+
+    /* Bron: ChatGPT */
+   @media (max-width: 600px) { 
+
+    input[type="search"] {
+        font-size: 14px; /* Kleinere tekstgrootte op kleinere schermen */
+    }
+}
+
 /*********** STOPT HIER: Styling voor alle de menubalk en hamburger menu ***********/
 
 
 
 
 /*********** BEGINT HIER: Styling voor de "Exclusive Prelaunch: Neverfull Inside Out"-section ***********/
-   main > section:nth-last-of-type(1) {
+   main > section:nth-of-type(1) {
 	top: 4em;
 	padding-bottom: 4em;
 	width: 100%;
+	display: grid;
    }
 
 /* Hier probeer ik in de eerste section de h2 in het midden en boven de foto te zetten */
    main > section:nth-of-type(1) > h2 { 
-	bottom: 7em;
-	top: 70%; 
-	left: 25%; 
+	position: absolute;
+	top:20.3em;
+	justify-self: center;
    }
 
 /* Hiermee stijl ik het linkje (a) in de eerste section */
 /* Ik probeer het in het midden te zetten en boven de image */
    main > section:nth-of-type(1) > a {
-	display: flex;
-	justify-content: center;
-	align-self: center;
+	position: absolute;
+	top:31em;
+	justify-self: center;
    }
 
    /* Dit is de styling voor de header image */
@@ -211,6 +251,7 @@ nav {
 	object-fit:cover;
 
 	display: block;
+	display:relative;
 
 }
 /*********** STOPT HIER: Styling voor de "Exclusive Prelaunch: Neverfull Inside Out"-section***********/
@@ -225,8 +266,12 @@ nav {
 		padding-right: 2em;
 	}
 
-	main > section:nth-of-type(2) ul{
+	main > section:nth-of-type(2) ul, section:nth-of-type(3) ul{
 		gap: 1.3em;
+		display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	padding-left: 0;
 	}
 
 	main > section:nth-of-type(2) li{ 
@@ -245,15 +290,6 @@ main > section:nth-of-type(2) h3 {
 
 }
 
-/* Hiermee maak ik een grid aan voor alle eerste ul's in een section */
-   section > ul {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	grid-column-gap: 2px;
-	grid-row-gap: 2px;
-	padding-left: 0;
-}
 /*********** STOPT HIER: Dit is de styling voor "Maison's Creations"-section ***********/
 
 
@@ -263,36 +299,53 @@ main > section:nth-of-type(2) h3 {
 	padding-top: 3em;
 } */
 
-section:nth-of-type(3) > p { 
+section:nth-of-type(3) > h4 { 
 	padding-top: 2em;
 	font-size: 0.7em;
 }
 
-section:nth-of-type(3) h2,p { 
+section:nth-of-type(3) h2,h4 { 
 	text-align: center;
 } 
+
 section:nth-of-type(3) > img:nth-of-type(1) {
 	padding-top: 1em;
-	padding-bottom: 1em;
+	padding-bottom: 3em;
 
 	height: 35em;
 	width: 100%;
 	object-fit:cover;
 
 	display: block;
+	order: -100;
 }
 
 section:nth-of-type(3) ul {
 	gap: 1.3em;
+	padding-left: 2em;
+	padding-right: 2em;
 }
 section:nth-of-type(3) li {
 	display: flex;
-	flex-direction: column-reverse;
+	flex-direction: column;
+	/* flex-direction: column-reverse; */
 }
+
+/* Selecteren van images in de tweede grid */
+/* section:nth-of-type(3) li > img { 
+} */
+
 main > section:nth-of-type(3) h3 { 
 	font-size: 1em;
 	text-align: left;
+	order: 500;
 }
+
+main > section:nth-of-type(3) p {
+	text-align: left;
+	order: 600;
+}
+
 
 section:nth-of-type(3) {
 	padding-top: 1em;
@@ -304,3 +357,49 @@ section:nth-of-type(3) a {
   	justify-content: center;
   	align-self: center;
 }
+/*********** STOPT HIER: Dit is de styling voor "LV Fall"-section ***********/
+
+
+
+/*********** BEGINT HIER: Dit is de styling voor "LV Services"-section ***********/
+section:nth-of-type(4) { 
+	padding-top:4em;
+}
+
+section:nth-of-type(4) p { 
+	text-align: center;
+}
+section:nth-of-type(4) ul { 
+	display: flex;
+	overflow: scroll;
+	gap:1em;
+	scroll-snap-type: x mandatory;
+}
+
+section:nth-of-type(4) li {
+	scroll-snap-align: center;
+	display: flex;
+	flex-direction: column;
+
+	display:grid;
+}
+
+
+section:nth-of-type(4) li > img { 
+	width: 80vw;
+    height: auto;
+    margin-top: 5vh;
+	order: -100;
+}
+
+section:nth-of-type(4) h3 { 
+	order: 500;
+}
+
+section:nth-of-type(4) a { 
+	display:grid;
+	justify-self: center;
+	order:600;
+}
+
+
