--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,12 @@
 	--color-text:light-dark(black, white);
 	--color-background:light-dark(white,black);
 	--placeholder-color: light-dark( #aaa,white);
+	--price-color: light-dark(#aaa, #aaa);
 	--lv-font: "lettertype";
+
+	--shadow-color-light: rgba(0, 0, 0, 0.2);
+  	--shadow-color-medium: rgba(0, 0, 0, 0.3);
+  	--shadow-color-dark: rgba(0, 0, 0, 0.35);
 }
 
 
@@ -33,11 +38,6 @@
 
 
 /*********** BEGINT HIER: Global Styling ***********/
-/* Maten voor foto's op alle pagina's */
-main img{
-    width: 100%;
-}
-
 li { 
 	list-style-type: none;
 }
@@ -47,6 +47,10 @@ h1, h2, h3 {
 	font-weight: 400;
 	font-family: var(--lv-font);
 	text-align: center;
+}
+
+h1 { 
+	font-weight: 500;
 }
 
 h2 { 
@@ -183,6 +187,9 @@ input[type="search"] {
 	border-radius: 50px;
 	border: 1px solid #000;
 	padding: 0.5em .5em .5em 2em;
+
+	/* Hier zorgt ik ervoor dat het vergrootglas in de achtergrond zit waardoor ik de input kan 
+	stylen en niet de achtergrond */
 	background-image: url(../images/header/search.svg);
 	background-repeat: no-repeat;
 	background-position: .3em center;
@@ -212,194 +219,86 @@ form:nth-of-type(1) button {
         font-size: 14px; /* Kleinere tekstgrootte op kleinere schermen */
     }
 }
-
 /*********** STOPT HIER: Styling voor alle de menubalk en hamburger menu ***********/
 
 
 
 
-/*********** BEGINT HIER: Styling voor de "Exclusive Prelaunch: Neverfull Inside Out"-section ***********/
-   main > section:nth-of-type(1) {
-	top: 4em;
-	padding-bottom: 4em;
-	width: 100%;
-	display: grid;
-   }
-
-/* Hier probeer ik in de eerste section de h2 in het midden en boven de foto te zetten */
-   main > section:nth-of-type(1) > h2 { 
-	position: absolute;
-	top:20.3em;
-	justify-self: center;
-   }
-
-/* Hiermee stijl ik het linkje (a) in de eerste section */
-/* Ik probeer het in het midden te zetten en boven de image */
-   main > section:nth-of-type(1) > a {
-	position: absolute;
-	top:31em;
-	justify-self: center;
-   }
-
-   /* Dit is de styling voor de header image */
-   /* Ik zorg ervoor dat de foto "inzoomt" binnen een bepaald frame */
-   main > section:nth-of-type(1) img {
-	padding-top: 4em;
-
-	height: 35em;
-	width: 100%;
-	object-fit:cover;
-
-	display: block;
-	display:relative;
-
-}
-/*********** STOPT HIER: Styling voor de "Exclusive Prelaunch: Neverfull Inside Out"-section***********/
-
-
-
-
-/*********** BEGINT HIER: Dit is de styling voor "Maison's Creations"-section ***********/
-/* Met padding geef ik het witruimte boven en onder */
-	main > section:nth-of-type(2) { 
-		padding-left: 2em;
-		padding-right: 2em;
-	}
-
-	main > section:nth-of-type(2) ul, section:nth-of-type(3) ul{
-		gap: 1.3em;
-		display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	padding-left: 0;
-	}
-
-	main > section:nth-of-type(2) li{ 
-		display: flex;
-		flex-direction:column-reverse;
-		gap: 0.7em;
-	}
-
-	main > section:nth-of-type(2) h2 { 
-		padding-top: 2em;
-		padding-bottom: 1em;
-}
-
-main > section:nth-of-type(2) h3 { 
-	font-size: 1em;
-
-}
-
-/*********** STOPT HIER: Dit is de styling voor "Maison's Creations"-section ***********/
-
-
-
-/*********** BEGINT HIER: Dit is de styling voor "LV Fall"-section ***********/
-/* section:nth-of-type(3) {
+/*********** BEGINT HIER: Styling van de footer ***********/
+footer { 
 	padding-top: 3em;
-} */
-
-section:nth-of-type(3) > h4 { 
-	padding-top: 2em;
-	font-size: 0.7em;
-}
-
-section:nth-of-type(3) h2,h4 { 
-	text-align: center;
-} 
-
-section:nth-of-type(3) > img:nth-of-type(1) {
-	padding-top: 1em;
-	padding-bottom: 3em;
-
-	height: 35em;
-	width: 100%;
-	object-fit:cover;
-
-	display: block;
-	order: -100;
-}
-
-section:nth-of-type(3) ul {
-	gap: 1.3em;
+	border-top: 1px solid var(--price-color);
 	padding-left: 2em;
 	padding-right: 2em;
 }
-section:nth-of-type(3) li {
-	display: flex;
-	flex-direction: column;
-	/* flex-direction: column-reverse; */
-}
 
-/* Selecteren van images in de tweede grid */
-/* section:nth-of-type(3) li > img { 
+/* footer > section:nth-of-type(1) > section {
+	padding-left: 1em;
+	padding-right: 1em;
 } */
 
-main > section:nth-of-type(3) h3 { 
-	font-size: 1em;
+footer section:nth-of-type(1) h2 { 
+	text-transform: uppercase;
+	font-weight: 500;
+}
+
+footer > section:nth-of-type(1) > section:nth-of-type(1) { 
+	padding-top: 2em; /* Zodat er wat ruimte ontstaat tussen de breadcrumb en fold-out */
+}
+
+/* Hier flex ik de laatste ul: Sitemap - Legal & Privacy - Cookies*/
+footer section:nth-of-type(1) > ul:nth-of-type(1){
+	display: flex;
+	justify-content: space-between;
+}
+
+/* footer section:nth-of-type(3) ul:nth-of-type(1) { 
+	padding-top: 2em;
+	padding-bottom: 2em;
+} */
+
+footer h4 { 
 	text-align: left;
-	order: 500;
-}
-
-main > section:nth-of-type(3) p {
-	text-align: left;
-	order: 600;
+	padding-left: 1em;
+	padding-bottom: 1em;
 }
 
 
-section:nth-of-type(3) {
-	padding-top: 1em;
-}
 
-/* Omdat text-align niet werkte heb ik dit gedaan. */
-section:nth-of-type(3) a {
+
+/* Styling van functionele delen in de footer */
+/* Bron: deel van Mehmet */
+footer summary {
 	display: flex;
-  	justify-content: center;
-  	align-self: center;
-}
-/*********** STOPT HIER: Dit is de styling voor "LV Fall"-section ***********/
+	justify-content: space-between;
 
-
-
-/*********** BEGINT HIER: Dit is de styling voor "LV Services"-section ***********/
-section:nth-of-type(4) { 
-	padding-top:4em;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 0.5em 0;
+    border-top: 1px solid var(--price-color);
+    list-style: none; /* Dit zorg ervoor dat het pijltje verwijderd wordt */
+    outline: none;
 }
 
-section:nth-of-type(4) p { 
-	text-align: center;
-}
-section:nth-of-type(4) ul { 
+/*********** STOPT HIER: Styling van de footer ***********/
+
+
+
+
+
+
+
+
+/* Hier flex ik de titels met het plusje */
+/* footer section:nth-of-type(1) ul:nth-of-type(2) li{
 	display: flex;
-	overflow: scroll;
-	gap:1em;
-	scroll-snap-type: x mandatory;
-}
-
-section:nth-of-type(4) li {
-	scroll-snap-align: center;
-	display: flex;
-	flex-direction: column;
-
-	display:grid;
-}
+	justify-content: space-between;
+	padding: 1em;
+	border-bottom: solid 0.5px var(--price-color);
+	border-top: solid 0.5px var(--price-color);
+} */
 
 
-section:nth-of-type(4) li > img { 
-	width: 80vw;
-    height: auto;
-    margin-top: 5vh;
-	order: -100;
-}
 
-section:nth-of-type(4) h3 { 
-	order: 500;
-}
-
-section:nth-of-type(4) a { 
-	display:grid;
-	justify-self: center;
-	order:600;
-}
 
 
