--- a/styles/style2.css
+++ b/styles/style2.css
@@ -72,7 +72,8 @@ main img {
 	}
 
 	main > section:nth-of-type(2) li:hover{ 
-		background-color: var(--color-text);
+		background-color: var(--hover);
+		
 	} 
 
 	main > section:nth-of-type(2) h2 { 
