--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@
 	--price-color: light-dark(#aaa, #aaa);
 	--hover: light-dark(pink,pink);
 	--lv-font: "lettertype";
+	--menu: light-dark(white,white);
 
 	--shadow-color-light: rgba(0, 0, 0, 0.2);
   	--shadow-color-medium: rgba(0, 0, 0, 0.3);
@@ -123,6 +124,50 @@ header > button {
 	padding-bottom: 0.2em; 
 	padding-left: 0.2em; 
 }
+
+header > button:nth-of-type(1) { 
+	width:2em;
+	aspect-ratio:1;
+	background-color: var(--menu);
+	padding:0;
+
+	display: grid;
+	place-items:center;
+}
+
+header > button:nth-of-type(1) span {
+	grid-column-start:1;
+	grid-row-start: 1;
+	display:block;
+
+	width:1em;
+	height:2px;
+	background-color: black;
+	transition: 5s;
+} 
+
+header > button:nth-of-type(1) span:nth-of-type(1) {
+	translate: 0 -.3em;
+}
+/* header > button:nth-of-type(1) span:nth-of-type(2) {
+
+} */
+header > button:nth-of-type(1) span:nth-of-type(3) {
+	translate: 0 .3em;
+}
+
+header > button:nth-of-type(1).open span:nth-of-type(1) {
+	translate: 0 0;
+	rotate:45deg;
+}
+header > button:nth-of-type(1).open span:nth-of-type(2) {
+	scale: 0 1;
+}
+header > button:nth-of-type(1).open span:nth-of-type(3) {
+	translate: 0 0;
+	rotate:-45deg;
+}
+
 
 nav {
 	font-family: "lettertype";
